Day4/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tektutor 
  annotations:
  #nginx.ingress.kubernetes.io/rewrite-target: /

   haproxy.router.openshift.io/rewrite-target: /
spec:
  rules:
  - host: tektutor.apps.crc.testing	
    http:
      paths:
      - backend:
          service:
            name: nginx-1
            port:
              number: 8080
        path: /nginx
        pathType: Prefix 

      - backend:
          service:
            name: hello 
            port:
              number: 8080
        path: /hello
        pathType: Prefix
